Integer value of fixes for depracation of constructor